--- a/src/app/carousel/carousel.component.css
+++ b/src/app/carousel/carousel.component.css
@@ -7,8 +7,20 @@
           border: 2px solid;
           border-color: rgb(69, 175, 189);
           font-weight: bold;
-          width: 130px;          
+          width: 150px;          
           box-shadow: none !important;
+}
+
+.mat-raised-button:hover {
+          background-color: rgb(69, 175, 189);
+          color:white;
+          box-shadow: 0;
+          border-radius: 50px;
+          height:50px;
+          width: 150px;
+          box-shadow: none !important;
+                    /* padding:5px; */
+          /* font-size: small; */
 }
 
 .img-wrap {
