--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -39,10 +39,23 @@
           box-shadow: 0;
           border-radius: 50px;
           height:50px;
-          width: 130px;
+          width: 150px;
           box-shadow: none !important;
                     /* padding:5px; */
           /* font-size: small; */
+}
+
+.mat-raised-button:hover {
+          background-color: transparent;
+          color:rgb(69, 175, 189);
+          box-shadow: 0;
+          border-radius: 50px;
+          height:50px;
+          border: 2px solid;
+          border-color: rgb(69, 175, 189);
+          font-weight: bold;
+          width: 150px;          
+          box-shadow: none !important;
 }
 
 .material-icons {
