--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/purple-green.css";
+@import "./zenit-styling.scss";
 @import "~primeng/resources/primeng.css";
 @import "~primeng/resources/themes/flick/theme.css";
 
